fix qr_modal (z-index and app-only buttons)

--- a/src/c3nav/site/static/site/css/c3nav.css
+++ b/src/c3nav/site/static/site/css/c3nav.css
@@ -303,6 +303,7 @@ footer {
     height:100%;
     background-color:rgba(0, 0, 0, 0.2);
     display:none;
+    z-index:100;
 }
 #qr_modal .inner {
     background-color:#FFFFFF;
